--- a/style.css
+++ b/style.css
@@ -1,36 +1,92 @@
+strong {
+  color: #5fa6c9;
+}
+i:before {
+  color: #7dc45f;
+  margin: 0 0 0 0.35em;
+}
+a {
+  color: #7dc45f;
+  text-decoration: none;
+  white-space: nowrap;
+}
 body {
-  margin: 2em auto;
-  padding: 0em;
+  font-size: 100%;
+  font-family: 'Source Sans Pro', sans-serif;
+}
+body > header {
+  margin: 0 auto;
+  max-width: 22em;
+}
+body > header h1 {
+  font-family: 'Source Sans Pro', sans-serif;
+  font-weight: 200;
   text-align: center;
-  color: #eee;
-  background-color: #292929;
-  max-width: 45em; /* Using em's because I'm cool like that */
 }
-
-h1 {
-  text-align:left;
-  margin: 0.5em;
-  font-size: 1.8em;
+body > header h1 span {
+  color: #5fa6c9;
 }
-
-section.content {
-  width: 90%;
-  margin: 0em auto;
-  text-align: left;
+body > header #address {
+  font-family: 'Source Sans Pro', sans-serif;
+  font-weight: 200;
+  list-style: none;
+  padding: 0;
+  text-align: center;
 }
-
-a:link {
-  color: #0067C2;
+body > header #links {
+  list-style: none;
+  padding: 0;
+  text-align: center;
 }
-
-a:visited {
-  color: #728FA8;
+body > header #links li {
+  margin: 0 0 0 0.5em;
+  display: inline;
 }
-
-a:hover {
-  color: #0285F7
+body > header p {
+  text-align: center;
 }
-
-a:active {
-  color: #7AC1FF;
+body > section {
+  margin: 0 auto;
+  max-width: 30em;
+}
+body > section > h1 {
+  font-family: 'Source Sans Pro', sans-serif;
+  font-weight: 400;
+  color: #5fa6c9;
+  position: relative;
+}
+body > section > h1:after {
+  content: "";
+  display: block;
+  background-color: #5fa6c9;
+  width: 7.5em;
+  height: 0.8em;
+  position: absolute;
+  left: -8em;
+  top: 0.2em;
+}
+body > section > section {
+  margin: 0 auto;
+}
+body > section > section h1 {
+  font-weight: 200;
+}
+body > section > section .date {
+  font-weight: 200;
+  float: right;
+}
+body > section > section li {
+  clear: both;
+}
+body > section > section ul {
+  padding-left: 10%;
+}
+body > section > section section {
+  margin-left: 2%;
+}
+footer {
+  font-size: 0.8em;
+  margin-top: 2em;
+  font-family: 'Source Sans Pro', sans-serif;
+  font-weight: 200;
 }
